--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "date-fns": "^2.16.1",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
